--- a/src/app/form-container/form-container.component.scss
+++ b/src/app/form-container/form-container.component.scss
@@ -112,6 +112,16 @@
       display: flex;
       margin-bottom: 10px;
       font-weight: 700;
+      align-items: center;
+      gap: 8px;
+      text-align: left;
+
+      .icon-help-circle {
+        width: 20px;
+        height: 20px;
+        background: #343A40;
+        cursor: pointer;
+      }
     }
   }
 }
