--- a/src/app/ui/components/ui-input/ui-input.component.scss
+++ b/src/app/ui/components/ui-input/ui-input.component.scss
@@ -52,8 +52,17 @@
     line-height: 24px;
     color: $black-900;
     margin-bottom: 8px;
-    display: block;
+    display: flex;
+    align-items: center;
+    gap: 8px;
     text-align: left;
+
+    .icon-help-circle {
+      width: 20px;
+      height: 20px;
+      background: #343A40;
+      cursor: pointer;
+    }
   }
 
   &__input {
