--- a/src/app/form-controls-panel/form-controls-panel.component.html
+++ b/src/app/form-controls-panel/form-controls-panel.component.html
@@ -1,9 +1,6 @@
 <div class="example-container">
   <div
-    cdkDropList
-    [cdkDropListData]="control"
-    [cdkDropListConnectedTo]="'formContainer'"
     class="example-list">
-    <div class="example-box" *ngFor="let item of control" cdkDrag>{{item.label}}</div>
+    <div class="example-box" *ngFor="let item of control" (click)="addNewControl(item)">{{item.label}}</div>
   </div>
 </div>
