--- a/src/app/form-controls-panel/form-controls-panel.component.scss
+++ b/src/app/form-controls-panel/form-controls-panel.component.scss
@@ -1,8 +1,9 @@
 
 .example-container {
+  position: sticky;
+  top: 20px;
   width: 400px;
   max-width: 100%;
-  margin: 0 25px 25px 0;
   display: inline-block;
   vertical-align: top;
 
@@ -31,9 +32,13 @@
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
-  cursor: move;
   background: white;
   font-size: 14px;
+  cursor: pointer;
+
+  &:hover {
+    background: rgba(52, 58, 64, 0.34);
+  }
 }
 
 .cdk-drag-preview {
