--- a/src/app/ui/components/ui-input/ui-input.component.scss
+++ b/src/app/ui/components/ui-input/ui-input.component.scss
@@ -19,7 +19,7 @@
     border: 1px solid $black-500;
     border-radius: 8px;
     cursor: text;
-    min-width: 300px;
+    max-width: 100%;
     transition: 120ms ease;
     height: 48px;
 
