--- a/src/app/control-settings/control-settings.component.html
+++ b/src/app/control-settings/control-settings.component.html
@@ -1,13 +1,89 @@
-<div class="control-settings-container">
-  <mat-checkbox [(ngModel)]="control.required">Обезателный</mat-checkbox>
-  <ui-input [(ngModel)]="control.label" [label]="'Название'"></ui-input>
+<h1 mat-dialog-title>Настройки контролера</h1>
+<div mat-dialog-content class="control-settings-container">
+  <mat-checkbox
+    color="primary"
+    ngDefaultControl
+    [(ngModel)]="control.required">Обезателный
+  </mat-checkbox>
+  <ui-input
+    ngDefaultControl
+    [(ngModel)]="control.label"
+    [label]="'Название'"></ui-input>
   <ui-input
     *ngIf="control.type !== 'table' && control.type !== 'pdf'"
-    [(ngModel)]="control.placeholder" [label]="'Заполнитель (Placeholder)'"></ui-input>
-  <ui-input [(ngModel)]="control.class" [label]="'Класс'"></ui-input>
-  <ui-input [(ngModel)]="control.tooltip" [label]="'Подсказка (Tooltip)'"></ui-input>
-  <ui-input [(ngModel)]="control.value" [label]="'Значение'"></ui-input>
-  <ui-input [(ngModel)]="control.min" *ngIf="control.type === 'number'" [type]="'number'" [label]="'Минимум'"></ui-input>
-  <ui-input [(ngModel)]="control.max" *ngIf="control.type === 'number'" [type]="'number'" [label]="'Максимум'"></ui-input>
-  <ui-input [(ngModel)]="control.maxLength" [type]="'number'" [label]="'Максимальное количество символов'"></ui-input>
+    ngDefaultControl
+    [(ngModel)]="control.placeholder"
+    [label]="'Заполнитель (Placeholder)'"></ui-input>
+  <ui-input
+    ngDefaultControl
+    [(ngModel)]="control.class"
+    [label]="'Класс'"></ui-input>
+  <ui-input
+    ngDefaultControl
+    [(ngModel)]="control.tooltip"
+    [label]="'Подсказка (Tooltip)'"></ui-input>
+  <ui-input
+    ngDefaultControl
+    [(ngModel)]="control.value"
+    *ngIf="!['pdf', 'table'].includes(control.type)"
+    [label]="'Значение'"></ui-input>
+  <ui-input
+    ngDefaultControl
+    [(ngModel)]="control.src"
+    *ngIf="control.type === 'pdf'"
+    [label]="'URL файла'"></ui-input>
+  <ui-input
+    ngDefaultControl
+    [(ngModel)]="control.min"
+    *ngIf="control.type === 'number'"
+    [type]="'number'"
+    [label]="'Минимум'"></ui-input>
+  <ui-input
+    ngDefaultControl
+    [(ngModel)]="control.max"
+    *ngIf="control.type === 'number'"
+    [type]="'number'"
+    [label]="'Максимум'"></ui-input>
+  <ui-input
+    *ngIf="['email', 'password', 'text', 'number'].includes(control.type)"
+    ngDefaultControl
+    [(ngModel)]="control.maxLength"
+    [type]="'number'"
+    [label]="'Максимальное количество символов'"></ui-input>
+
+  <div class="control-options" *ngIf="['select', 'checkbox-group', 'radio-group'].includes(control.type)">
+    <label class="mat-form-field-label">Варианты</label>
+    <div class="options">
+      <div class="option" *ngFor="let option of control.options; let i = index">
+        <mat-checkbox
+          color="primary"
+          ngDefaultControl
+          (change)="changeDefaultValue(option)"
+          [ngModel]="option.value"></mat-checkbox>
+        <ui-input
+          ngDefaultControl
+          [(ngModel)]="option.key"
+          [type]="'text'"
+          [placeholder]="'Ключ (key)'"></ui-input>
+        <ui-input
+          style="width: 50%;"
+          ngDefaultControl
+          [(ngModel)]="option.label"
+          [type]="'text'"
+          [placeholder]="'Название варианта'"></ui-input>
+        <button class="removeOptions" (click)="removeOption(i)">
+          <span class="icon icon-close"></span>
+        </button>
+      </div>
+    </div>
+
+    <button class="addOption" (click)="addOption()">
+      Добавить вариант
+      <span class="icon icon-add"></span>
+    </button>
+  </div>
+</div>
+<div mat-dialog-actions class="dialog-actions">
+  <button [color]="'warn'" mat-button [mat-dialog-close]="null">Закрыт</button>
+  <button [color]="'primary'" mat-button [mat-dialog-close]="control" cdkFocusInitial>Сохранит</button>
 </div>
