--- a/src/app/form-container/form-container.component.html
+++ b/src/app/form-container/form-container.component.html
@@ -1,154 +1,180 @@
-<div class="form-container">
+<div class="form-control-list"
+     [class.noEmpty]="layout.length || mode === 'view'">
 
-  <div
-    cdkDropList
-    [id]="'formContainer'"
-    [cdkDropListData]="form"
-    class="form-control-list"
-    [class.noEmpty]="form.length"
-    (cdkDropListDropped)="createController($event)">
-    <div class="form-control-list-item" *ngFor="let item of form" cdkDrag>
-      <div class="btn-container">
-        <div class="control-btn edit" (click)="item.isEdit = !item.isEdit">
-          <span class="icon icon-pen"></span>
+  <ktd-grid [cols]="cols"
+            [rowHeight]="rowHeight"
+            [layout]="layout"
+            [gap]="10"
+            (layoutUpdated)="onLayoutUpdated($event)">
+    <ktd-grid-item class="grid-item"
+                   [draggable]="mode === 'edit'"
+                   [resizable]="mode === 'edit'"
+                   *ngFor="let item of layout; trackBy:trackById" [id]="item.id">
+      <!-- Your grid item content goes here -->
+
+      <div class="form-control-list-item">
+
+
+        <div class="btn-container" *ngIf="mode === 'edit'">
+          <div class="control-btn edit" (click)="openEditDialog(item)">
+            <span class="icon icon-pen"></span>
+          </div>
+          <div class="control-btn delete" (click)="removeItem(item.id)">
+            <span class="icon icon-close"></span>
+          </div>
         </div>
-        <div class="control-btn delete">
-          <span class="icon icon-close"></span>
-        </div>
+
+        <ng-container [ngSwitch]="item.data.type">
+          <ng-container *ngSwitchCase="'text'">
+            <ui-input
+              [type]="'text'"
+              class="form-control {{item.data.class}}"
+              [label]="item.data.label ?? ''"
+              [required]="item.data.required ?? false"
+              [tooltip]="item.data.tooltip ?? ''"
+              [placeholder]="item.data.placeholder ?? ''"
+              [maxlength]="item.data.maxLength ?? ''"
+              [(ngModel)]="item.data.value"
+            ></ui-input>
+          </ng-container>
+          <ng-container *ngSwitchCase="'number'">
+            <ui-input
+              [type]="'number'"
+              class="form-control {{item.data.class}}"
+              [label]="item.data.label ?? ''"
+              [required]="item.data.required ?? false"
+              [tooltip]="item.data.tooltip ?? ''"
+              [placeholder]="item.data.placeholder ?? ''"
+              [maxlength]="item.data.maxLength ?? ''"
+              [min]="item.data.min ?? 0"
+              [max]="item.data.max ?? 0"
+              [(ngModel)]="item.data.value"
+            ></ui-input>
+          </ng-container>
+          <ng-container *ngSwitchCase="'email'">
+            <ui-input
+              [type]="'email'"
+              class="form-control"
+              [required]="item.data.required ?? false"
+              [label]="item.data.label ?? ''"
+              [tooltip]="item.data.tooltip ?? ''"
+              [placeholder]="item.data.placeholder ?? ''"
+              [(ngModel)]="item.data.value"
+            ></ui-input>
+          </ng-container>
+          <ng-container *ngSwitchCase="'password'">
+            <ui-input
+              [type]="'password'"
+              class="form-control"
+              [required]="item.data.required ?? false"
+              [label]="item.data.label ?? ''"
+              [tooltip]="item.data.tooltip ?? ''"
+              [placeholder]="item.data.placeholder ?? ''"
+              [(ngModel)]="item.data.value"
+            ></ui-input>
+          </ng-container>
+          <ng-container *ngSwitchCase="'date'">
+            <ui-input
+              [type]="'date'"
+              class="form-control"
+              [required]="item.data.required ?? false"
+              [label]="item.data.label ?? ''"
+              [tooltip]="item.data.tooltip ?? ''"
+              [placeholder]="item.data.placeholder ?? ''"
+              [(ngModel)]="item.data.value"
+            ></ui-input>
+          </ng-container>
+          <ng-container *ngSwitchCase="'time'">
+            <ui-input
+              [type]="'time'"
+              class="form-control"
+              [required]="item.data.required ?? false"
+              [label]="item.data.label ?? ''"
+              [tooltip]="item.data.tooltip ?? ''"
+              [placeholder]="item.data.placeholder ?? ''"
+              [(ngModel)]="item.data.value"
+            ></ui-input>
+          </ng-container>
+          <ng-container *ngSwitchCase="'checkbox-group'">
+            <section class="d-flex flex-column form-control {{item.data.class}}">
+              <label class="form-control__label">
+                <span *ngIf="item.data.label?.length">{{ item.data.label }}</span>
+                <span *ngIf="item.data.tooltip?.length" matTooltipPosition="above" matTooltip="{{item.data.tooltip}}"
+                      class="icon icon-help-circle"></span>
+              </label>
+              <mat-checkbox color="primary"
+                            [id]="option.key"
+                            *ngFor="let option of item.data.options"
+                            (ngModelChange)="onCheckBoxSelect(item)"
+                            [(ngModel)]="option.value">{{option.label}}</mat-checkbox>
+            </section>
+          </ng-container>
+          <ng-container *ngSwitchCase="'radio-group'">
+            <section class="d-flex flex-column form-control {{item.data.class}}">
+              <label class="form-control__label">
+                <span *ngIf="item.data.label?.length">{{ item.data.label }}</span>
+                <span *ngIf="item.data.tooltip?.length" matTooltipPosition="above" matTooltip="{{item.data.tooltip}}"
+                      class="icon icon-help-circle"></span>
+              </label>
+              <mat-radio-group
+                [(ngModel)]="item.data.value" class="d-flex flex-column">
+                <mat-radio-button class=""
+                                  color="primary"
+                                  [id]="option.key"
+                                  *ngFor="let option of item.data.options"
+                                  [value]="option.key">{{option.label}}</mat-radio-button>
+              </mat-radio-group>
+            </section>
+          </ng-container>
+          <ng-container *ngSwitchCase="'pdf'">
+            <section class="form-control {{item.data.class}}">
+              <label class="form-control__label">
+                <span *ngIf="item.data.label?.length">{{ item.data.label }}</span>
+                <span *ngIf="item.data.tooltip?.length" matTooltipPosition="above" matTooltip="{{item.data.tooltip}}"
+                      class="icon icon-help-circle"></span>
+              </label>
+              <pdf-viewer [src]="item.data.src ?? ''"
+                          [render-text]="true"
+                          [original-size]="false"
+                          [zoom]="item.data.zoom ?? 1"
+                          style="width: 100%; height: 100%"
+              ></pdf-viewer>
+              <div class="pdf-controls">
+                <div class="zoom-btn" (click)="zoom(item.data, 'out')">
+                  <div class="icon icon-zoom-out"></div>
+                </div>
+                <div class="zoom-btn" (click)="zoom(item.data, 'in')">
+                  <div class="icon icon-zoom-in"></div>
+                </div>
+              </div>
+            </section>
+          </ng-container>
+          <ng-container *ngSwitchCase="'table'">
+            <section class="form-control {{item.data.class}}">
+              <label class="form-control__label">
+                <span *ngIf="item.data.label?.length">{{ item.data.label }}</span>
+                <span *ngIf="item.data.tooltip?.length" matTooltipPosition="above" matTooltip="{{item.data.tooltip}}"
+                      class="icon icon-help-circle"></span>
+              </label>
+              <ui-table (onChangeTable)="resizeGridItem(item)" [tableData]="item.data.value"></ui-table>
+            </section>
+          </ng-container>
+
+
+        </ng-container>
       </div>
-      <ng-container [ngSwitch]="item.type">
-        <ng-container *ngSwitchCase="'text'">
-          <ui-input
-            [type]="'text'"
-            class="form-control {{item.class}}"
-            [label]="item.label ?? ''"
-            [tooltip]="item.tooltip ?? ''"
-            [placeholder]="item.placeholder ?? ''"
-            [maxlength]="item.maxLength ?? ''"
-            [(ngModel)]="item.value"
-          ></ui-input>
-        </ng-container>
-        <ng-container *ngSwitchCase="'number'">
-          <ui-input
-            [type]="'number'"
-            class="form-control {{item.class}}"
-            [label]="item.label ?? ''"
-            [tooltip]="item.tooltip ?? ''"
-            [placeholder]="item.placeholder ?? ''"
-            [maxlength]="item.maxLength ?? ''"
-            [min]="item.min ?? 0"
-            [max]="item.max ?? 0"
-            [(ngModel)]="item.value"
-          ></ui-input>
-        </ng-container>
-        <ng-container *ngSwitchCase="'email'">
-          <ui-input
-            [type]="'email'"
-            class="form-control"
-            [label]="item.label ?? ''"
-            [tooltip]="item.tooltip ?? ''"
-            [placeholder]="item.placeholder ?? ''"
-            [(ngModel)]="item.value"
-          ></ui-input>
-        </ng-container>
-        <ng-container *ngSwitchCase="'password'">
-          <ui-input
-            [type]="'password'"
-            class="form-control"
-            [label]="item.label ?? ''"
-            [tooltip]="item.tooltip ?? ''"
-            [placeholder]="item.placeholder ?? ''"
-            [(ngModel)]="item.value"
-          ></ui-input>
-        </ng-container>
-        <ng-container *ngSwitchCase="'date'">
-          <ui-input
-            [type]="'date'"
-            class="form-control"
-            [label]="item.label ?? ''"
-            [tooltip]="item.tooltip ?? ''"
-            [placeholder]="item.placeholder ?? ''"
-            [(ngModel)]="item.value"
-          ></ui-input>
-        </ng-container>
-        <ng-container *ngSwitchCase="'time'">
-          <ui-input
-            [type]="'time'"
-            class="form-control"
-            [label]="item.label ?? ''"
-            [tooltip]="item.tooltip ?? ''"
-            [placeholder]="item.placeholder ?? ''"
-            [(ngModel)]="item.value"
-          ></ui-input>
-        </ng-container>
-        <ng-container *ngSwitchCase="'checkbox-group'">
-          <section class="d-flex flex-column form-control {{item.class}}">
-            <label class="form-control__label">
-               <span *ngIf="item.label?.length">{{ item.label }}</span>
-    <span *ngIf="item.tooltip?.length" matTooltipPosition="above" matTooltip="{{item.tooltip}}"
-          class="icon icon-help-circle"></span>
-            </label>
-            <mat-checkbox color="primary"
-                          class=""
-                          *ngFor="let option of item.options"
-                          (ngModelChange)="item.value = option.value"
-                          [(ngModel)]="option.value">{{option.label}}</mat-checkbox>
-          </section>
-        </ng-container>
-        <ng-container *ngSwitchCase="'radio-group'">
-          <section class="d-flex flex-column form-control {{item.class}}">
-            <label class="form-control__label">
-               <span *ngIf="item.label?.length">{{ item.label }}</span>
-    <span *ngIf="item.tooltip?.length" matTooltipPosition="above" matTooltip="{{item.tooltip}}"
-          class="icon icon-help-circle"></span>
-            </label>
-            <mat-radio-group [(ngModel)]="item.value" class="d-flex flex-column">
-              <mat-radio-button class=""
-                                color="primary"
-                                *ngFor="let option of item.options"
-                                (change)="item.value = option.selected"
-                                [value]="option.selected">{{option.label}}</mat-radio-button>
-            </mat-radio-group>
-          </section>
-        </ng-container>
-        <ng-container *ngSwitchCase="'pdf'">
-          <section class="form-control {{item.class}}">
-            <label class="form-control__label">
-               <span *ngIf="item.label?.length">{{ item.label }}</span>
-    <span *ngIf="item.tooltip?.length" matTooltipPosition="above" matTooltip="{{item.tooltip}}"
-          class="icon icon-help-circle"></span>
-            </label>
-            <pdf-viewer [src]="item.src ?? ''"
-                        [render-text]="true"
-                        [original-size]="false"
-                        [zoom]="item.zoom ?? 1"
-                        style="width: 100%; height: 500px"
-            ></pdf-viewer>
-            <div class="pdf-controls">
-              <div class="zoom-btn" (click)="zoom(item, 'out')">
-                <div class="icon icon-zoom-out"></div>
-              </div>
-              <div class="zoom-btn" (click)="zoom(item, 'in')">
-                <div class="icon icon-zoom-in"></div>
-              </div>
-            </div>
-          </section>
-        </ng-container>
-        <ng-container *ngSwitchCase="'table'">
-          <section class="form-control {{item.class}}">
-            <label class="form-control__label">
-               <span *ngIf="item.label?.length">{{ item.label }}</span>
-    <span *ngIf="item.tooltip?.length" matTooltipPosition="above" matTooltip="{{item.tooltip}}"
-          class="icon icon-help-circle"></span>
-            </label>
-            <ui-table></ui-table>
-          </section>
-        </ng-container>
 
 
-      </ng-container>
 
-      <app-control-settings *ngIf="item.isEdit" class="control-settings" [control]="item"></app-control-settings>
-    </div>
-  </div>
+      <!-- Optional Custom placeholder template -->
+      <ng-template ktdGridItemPlaceholder>
+        <!-- Custom placeholder content goes here -->
+
+        <div style="background: rgba(232,99,99,0.54); width: 100%; height: 100%;"></div>
+      </ng-template>
+    </ktd-grid-item>
+  </ktd-grid>
+
 </div>
+
+
