--- a/src/app/form-container/form-container.component.scss
+++ b/src/app/form-container/form-container.component.scss
@@ -1,44 +1,43 @@
-.form {
-  &-container {
+.btn-container {
+  display: none;
+  align-items: center;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 1;
+  gap: 10px;
 
+  .control-btn {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 
-    .btn-container {
-      display: none;
-      align-items: center;
-      position: absolute;
-      right: 0;
-      top: 0;
-      z-index: 1;
-      gap: 10px;
+    .icon {
+      width: 20px;
+      height: 20px;
+    }
 
-      .control-btn {
-        width: 30px;
-        height: 30px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
+    &:hover {
+      .icon {
+        background: #fff;
+      }
 
-        .icon {
-          width: 20px;
-          height: 20px;
-        }
+      &.delete {
+        background: #ab2424;
+      }
 
-        &:hover {
-          .icon {
-            background: #fff;
-          }
-
-          &.delete {
-            background: #ab2424;
-          }
-
-          &.edit {
-            background: #d07509;
-          }
-        }
+      &.edit {
+        background: #d07509;
       }
     }
+  }
+}
+
+.form {
+  &-container {
 
     .control-settings {
       display: block;
@@ -49,8 +48,10 @@
     box-shadow: 0 0 7px 0px rgb(0 0 0 / 24%);
     overflow: hidden;
     border-radius: 5px;
+    box-sizing: border-box;
     padding: 10px;
     width: 100%;
+    height: 100%;
     background: #fff;
     position: relative;
 
@@ -63,10 +64,14 @@
       flex-direction: column;
       gap: 10px;
       transition: 0.3s;
+      background: #e1e1e1;
+      padding-bottom: 50px;
 
       &-item {
         position: relative;
         transition: 0.5s;
+        height: 100%;
+
 
         &:hover {
           .btn-container {
@@ -77,6 +82,7 @@
 
       &.noEmpty {
         border-color: transparent;
+        background: transparent;
       }
     }
 
@@ -124,4 +130,10 @@
       }
     }
   }
+}
+
+.grid-item {
+  overflow: hidden;
+  border-radius: 5px;
+  box-shadow: 0 0 3px 1px #00000024;
 }
