--- a/src/app/control-settings/control-settings.component.html
+++ b/src/app/control-settings/control-settings.component.html
@@ -18,10 +18,14 @@
     ngDefaultControl
     [(ngModel)]="control.class"
     [label]="'Класс'"></ui-input>
+<!--  <ui-input-->
+<!--    ngDefaultControl-->
+<!--    [(ngModel)]="control.tooltip"-->
+<!--    [label]="'Подсказка с верху (Tooltip)'"></ui-input>-->
   <ui-input
     ngDefaultControl
-    [(ngModel)]="control.tooltip"
-    [label]="'Подсказка (Tooltip)'"></ui-input>
+    [(ngModel)]="control.hint"
+    [label]="'Подсказка'"></ui-input>
   <ui-input
     ngDefaultControl
     [(ngModel)]="control.value"
