--- a/src/app/form-container/form-container.component.html
+++ b/src/app/form-container/form-container.component.html
@@ -32,6 +32,7 @@
               [label]="item.data.label ?? ''"
               [required]="item.data.required ?? false"
               [tooltip]="item.data.tooltip ?? ''"
+              [hint]="item.data.hint ?? ''"
               [placeholder]="item.data.placeholder ?? ''"
               [maxlength]="item.data.maxLength ?? ''"
               [(ngModel)]="item.data.value"
@@ -44,6 +45,7 @@
               [label]="item.data.label ?? ''"
               [required]="item.data.required ?? false"
               [tooltip]="item.data.tooltip ?? ''"
+              [hint]="item.data.hint ?? ''"
               [placeholder]="item.data.placeholder ?? ''"
               [maxlength]="item.data.maxLength ?? ''"
               [min]="item.data.min ?? 0"
@@ -58,6 +60,7 @@
               [required]="item.data.required ?? false"
               [label]="item.data.label ?? ''"
               [tooltip]="item.data.tooltip ?? ''"
+              [hint]="item.data.hint ?? ''"
               [placeholder]="item.data.placeholder ?? ''"
               [(ngModel)]="item.data.value"
             ></ui-input>
@@ -69,6 +72,7 @@
               [required]="item.data.required ?? false"
               [label]="item.data.label ?? ''"
               [tooltip]="item.data.tooltip ?? ''"
+              [hint]="item.data.hint ?? ''"
               [placeholder]="item.data.placeholder ?? ''"
               [(ngModel)]="item.data.value"
             ></ui-input>
@@ -80,6 +84,7 @@
               [required]="item.data.required ?? false"
               [label]="item.data.label ?? ''"
               [tooltip]="item.data.tooltip ?? ''"
+              [hint]="item.data.hint ?? ''"
               [placeholder]="item.data.placeholder ?? ''"
               [(ngModel)]="item.data.value"
             ></ui-input>
@@ -91,6 +96,7 @@
               [required]="item.data.required ?? false"
               [label]="item.data.label ?? ''"
               [tooltip]="item.data.tooltip ?? ''"
+              [hint]="item.data.hint ?? ''"
               [placeholder]="item.data.placeholder ?? ''"
               [(ngModel)]="item.data.value"
             ></ui-input>
