--- a/src/app/ui/components/ui-input/ui-input.component.scss
+++ b/src/app/ui/components/ui-input/ui-input.component.scss
@@ -76,6 +76,13 @@
     width: 100%;
   }
 
+  &__hint {
+    font-size: 12px;
+    color: #848484;
+    margin-top: 6px;
+    display: flex;
+  }
+
   &__suffix {
     margin-left: 8px;
     position: relative;
