--- a/src/app/form-container/form-container.component.scss
+++ b/src/app/form-container/form-container.component.scss
@@ -32,7 +32,13 @@
       &.edit {
         background: #d07509;
       }
+
+      &.drag {
+        background: #1565C0;
+      }
+
     }
+
   }
 }
 
@@ -54,6 +60,8 @@
     height: 100%;
     background: #fff;
     position: relative;
+    display: flex;
+    flex-direction: column;
 
     &-list {
       min-width: 60vw;
@@ -128,6 +136,13 @@
         background: #343A40;
         cursor: pointer;
       }
+    }
+
+    &__hint {
+      font-size: 12px;
+      color: #848484;
+      margin-top: 6px;
+      display: flex;
     }
   }
 }
