--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,4 @@
 
 @import 'styles/index';
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "~iv-viewer/dist/iv-viewer.min.css";
